results/models/glm-4.6v-Tools/cot/glm-4.6v-Tools_65_0.txt
[Tool call: execute_python({"code": "print(\"\"\"\nimport sys\nimport json\nfrom typing import List, Dict, Set, Tuple\nfrom col)]
[Tool result: STDERR:
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_cb0fd7f2.py", line 20
    """Perform topological sort using Kahn's algorithm"""
                                          ^
SyntaxError: unterminated string literal (detected at line 20)

[exit code 1]]

[Tool call: execute_python({"code": "print(\"\"\"\nimport sys\nimport json\nfrom typing import List, Dict, Set, Tuple\nfrom col)]
[Tool result: STDERR:
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_32faeddf.py", line 20
    """Perform topological sort using Kahn's algorithm"""
                                          ^
SyntaxError: unterminated string literal (detected at line 20)

[exit code 1]]

[Tool call: execute_python({"code": "print(\"\"\"\nimport sys\nimport json\nfrom typing import List, Dict, Set, Tuple\nfrom col)]
[Tool result: import sys
import json
from typing import List, Dict, Set, Tuple
from collections import deque
import heapq

class TaskScheduler:
    def __init__(self, machine_count: int, tasks: List[Dict]):
        self.machine_count = machine_count
        self.tasks = tasks
        self.task_map = {task['id']: task for task in tasks}
        self.task_order = []
        self.schedule = []
        self.machine_times = [0] * machine_count
        self.task_start_times = {}
        self.task_end_times = {}
   ]

[Tool call: execute_python({"code": "print(\"\"\"\n// TypeScript implementation of the task scheduler\n// This program reads JS)]
[Tool result: // TypeScript implementation of the task scheduler
// This program reads JSON input from stdin and outputs a schedule or order

interface Task {
    id: number;
    duration: number;
    deps: number[];
    deadline: number;
    weight: number;
}

interface ScheduleEntry {
    id: number;
    start: number;
    machine: number;
}

class TaskScheduler {
    private machineCount: number;
    private tasks: Task[];
    private taskMap: Map<number, Task>;
    private machineTimes: number[];
    priv]

[Tool call: execute_python({"code": "print(\"\"\"\n// Complete TypeScript program for the task scheduling benchmark\n// This pr)]
[Tool result: // Complete TypeScript program for the task scheduling benchmark
// This program reads JSON input from stdin and outputs a schedule

interface Task {
    id: number;
    duration: number;
    deps: number[];
    deadline: number;
    weight: number;
}

interface ScheduleEntry {
    id: number;
    start: number;
    machine: number;
}

class TaskScheduler {
    private machineCount: number;
    private tasks: Task[];
    private taskMap: Map<number, Task>;
    private machineTimes: number[];
   ]